# student-attendance-tracker

student-attendance-system/: README.md  index.html  main.py  pyproject.toml
student-attendance-system/data/: attendance.csv  users.csv
student-attendance-system/pages/: attendance.py  register.py  reports.py
student-attendance-system/utils/: auth.py  database.py
