[tool.poetry]
name = "student-attendance-system"
version = "0.1.0"
description = "A Streamlit-based student attendance tracking system with biometric authentication"
authors = ["Huy Le, hl9082@rit.edu"]
keywords = ["streamlit", "attendance", "biometric", "tracking", "student"]

[tool.poetry.dependencies]
python= ">=3.10"
numpy = ">=2.2.3"
pandas = ">=2.2.3"
plotly = ">=6.0.0"
streamlit = ">=1.42.1"

[tool.poetry.packages]
[[tool.poetry.packages]]
include = "src"

package-mode=false
