[tool.poetry]
name = "student-attendance-system"
version = "0.1.0"
description = "A Streamlit-based student attendance tracking system with biometric authentication"
authors = ["Huy Le, hl9082@rit.edu"]
keywords = ["streamlit", "attendance", "biometric", "tracking", "student"]

[
tool.poetry.dependencies
]
python = ">=3.10"
numpy = "^1.21.0"  # Adjust version as needed
pandas = "^1.3.0"  # Adjust version as needed
plotly = "^5.0.0"  # Adjust version as needed
streamlit = "^1.0.0"  # Adjust version as needed

[
tool.poetry.packages
]
include = ["src"]

# Remove 'package-mode=false' as it is not a valid configuration
